--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
